--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "fzaninotto/faker": "^1.5"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.3"
     }
 }
